Fix search and sidebar z-index

--- a/theme/styles/common.css
+++ b/theme/styles/common.css
@@ -1548,6 +1548,8 @@ ul.grid-halves {
 /* search */
 /* header */
 .search-header {
+    z-index: 9999999;
+    position: relative;
     height: 96px;
     background-color: #fff;
     border-bottom: 1px solid #dfdfdf;
